@@ -60,7 +60,7 @@ struct
 
 local
 
-val data = Unsynchronized.ref ([]: Universal.universal  Unsynchronized.ref list);
+val data = ref ([]: Universal.universal  ref list);
 
 fun find_data tag =
   let
@@ -75,7 +75,7 @@ fun getLocal tag = Option.map (Universal.tagProject tag o !) (find_data tag);
 fun setLocal (tag, x) =
   (case find_data tag of
     SOME r => r := Universal.tagInject tag x
-  | NONE => data :=  Unsynchronized.ref (Universal.tagInject tag x) :: ! data);
+  | NONE => data :=  ref (Universal.tagInject tag x) :: ! data);
 
 end;
 end;
